style(form): prevent component from spilling outside its container

--- a/packages/drip-form/src/components/CommonContainerHoc/index.styl
+++ b/packages/drip-form/src/components/CommonContainerHoc/index.styl
@@ -15,4 +15,5 @@
 				flex-direction row-reverse
 
 	&--content
-		width 100%
+		flex 1
+		min-width 0
